tests/ui/substrate/error/fail_duplicated_ret_val.stderr
error: ret_val value is used twice
 --> tests/ui/substrate/error/fail_duplicated_ret_val.rs:8:22
  |
8 |     #[obce(ret_val = "100")]
  |                      ^^^^^

error[E0433]: failed to resolve: use of undeclared type `Error`
  --> tests/ui/substrate/error/fail_duplicated_ret_val.rs:16:25
   |
16 |     assert_encode_holds(Error::One);
   |                         ^^^^^ use of undeclared type `Error`

error[E0433]: failed to resolve: use of undeclared type `Error`
  --> tests/ui/substrate/error/fail_duplicated_ret_val.rs:17:27
   |
17 |     assert_try_from_holds(Error::One);
   |                           ^^^^^ use of undeclared type `Error`
